--- a/src/layouts/components/Container/container.scss
+++ b/src/layouts/components/Container/container.scss
@@ -105,3 +105,32 @@
     opacity: 1;
   }
 }
+
+.navigation__item {
+  padding: 0 !important;
+  height: 45px;
+}
+
+.navigation__link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  text-decoration: none;
+
+  &:hover {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
+
+.sidebar__header {
+  margin-bottom: 57px;
+  padding: 13px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
