--- a/src/layouts/components/Container/container.scss
+++ b/src/layouts/components/Container/container.scss
@@ -7,6 +7,7 @@
 
 .page {
   flex-grow: 1;
+  background-color: #fefefe;
 }
 
 .header {
@@ -133,4 +134,8 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+}
+
+.page {
+
 }
