--- a/src/components/Game/components/Card/card.scss
+++ b/src/components/Game/components/Card/card.scss
@@ -1,6 +1,38 @@
 .card-wrapper {
   cursor: pointer;
-  perspective: 600px;
+  perspective: 300px;
+}
+
+@keyframes hiding {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1, 1) translateX(-10px);
+  }
+  50% {
+    transform: scale(1.1, 0.9) translateX(10px);
+  }
+  100% {
+    transform: scale(0.9, 1.1) translateX(-10px);
+  }
+}
+
+.card-wrapper_hide {
+  animation: hiding 1s, bounce 300ms infinite;
+  opacity: 0;
 }
 
 .card {
