--- a/src/layouts/components/Main/main.scss
+++ b/src/layouts/components/Main/main.scss
@@ -1,9 +1,11 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 100vh;
   justify-content: space-between;
+  min-height: 100vh;
+  min-width: 375px;
+  // height: 100vh;
+  padding-bottom: 77px;
 }
 
 .page {
@@ -18,7 +20,6 @@
 }
 
 .header__inner {
-  // max-width: 1024px;
   width: 100%;
   height: 57px;
   margin: 0 auto;
@@ -28,6 +29,8 @@
 }
 
 .footer {
+  position: fixed;
+  bottom: 0;
   width: 100%;
   background-color: #3f51b5;
   padding: 0 24px;
@@ -137,7 +140,8 @@
 }
 
 .wrapper_theme_dark {
-  
+  background-color: #0d1117;
+
   & .header,
     .footer {
     background-color: #161b22;
