--- a/src/layouts/components/Main/main.scss
+++ b/src/layouts/components/Main/main.scss
@@ -178,3 +178,66 @@
     background-color: #3c424a;
   }
 }
+
+.game-controls {
+  position: absolute;
+  right: 20px;
+  z-index: 2;
+  padding-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.game-controls__button {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: transform 300ms;
+
+  & img {
+    width: 100%;
+    height: auto;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+  }
+
+  &:first-child {
+    margin-right: 10px;
+  }
+}
+
+.game-controls__button_mute::before {
+  content: "";
+  position: absolute;
+  top: 40%;
+  left: -5px;
+  display: block;
+  width: 40px;
+  height: 2px;
+  background-color: #000;
+  transform: rotate(45deg);
+  animation: mute 300ms;
+}
+
+@keyframes mute {
+  from {
+    width: 0;
+    top: 0;
+  }
+  50% {
+    width: 20px;
+    top: 20%;
+  }
+  to {
+    width: 40px;
+    top: 40%;
+  }
+}
