--- a/src/components/Game/game.scss
+++ b/src/components/Game/game.scss
@@ -70,12 +70,16 @@
 }
 
 .statistics {
+  margin-top: 20px;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   width: 100%;
+}
+
+.statistics__inner:first-child {
+  margin-right: 20px;
 }
 
 .score-wrapper {
