--- a/src/layouts/components/Main/main.scss
+++ b/src/layouts/components/Main/main.scss
@@ -152,6 +152,10 @@
     color: #fff;
   }
 
+  & .game_fullscreen {
+    background-color: #0d1117;
+  }
+
   & .feedback {
     color: #3c424a;
   }
